dataset1235/2025-2/805158916/users/2029902540/executions/1584167357_1026882843.log
== RUN (2025-08-27 14:29:08)
-- CODE: 
import math
pi = match.pi
raio = float(input())
volume = (4/3) * pi * raio 
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:28:27)
-- CODE: 
import math
pi = match.pi
raio = float(input())
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = match.pi
         ^^^^^
NameError: name 'match' is not defined. Did you mean: 'math'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:54:25)
-- CODE: 
import math
raio = float(input("Valor do raio: "))
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
Valor do raio: 0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
Valor do raio: 32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
Valor do raio: 38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
Valor do raio: 452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
Valor do raio: 221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
Valor do raio: 346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:29:18)
-- CODE: 
importmath
pi = match.pi
raio = float(input())
volume = (4/3) * pi * raio 
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importmath
NameError: name 'importmath' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importmath
NameError: name 'importmath' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importmath
NameError: name 'importmath' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importmath
NameError: name 'importmath' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importmath
NameError: name 'importmath' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importmath
NameError: name 'importmath' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:22:47)
-- CODE: 
raio = float(input("digite o raio: "))
area = (pi * raio**2)
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (pi * raio**2)
            ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (pi * raio**2)
            ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (pi * raio**2)
            ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (pi * raio**2)
            ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (pi * raio**2)
            ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (pi * raio**2)
            ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
